gitops/namespaces/jko-dev/base/workloads/containers/welcome-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-nginx
  labels:
    app.kubernetes.io/name: welcome-nginx
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: welcome-nginx
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
