gitops/namespaces/jko-dev/base/workloads/containers/welcome-nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: welcome-nginx
  labels:
    app.kubernetes.io/name: welcome-nginx
    app.kubernetes.io/component: web
spec:
  host: welcome-nginx-jko-dev.apps-crc.testing
  to:
    kind: Service
    name: welcome-nginx
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
